# chronicle

./: README.md  development.env  docker-compose.yaml
site/: .gitlab-ci.yml  Dockerfile  bun.lockb  components.json  eslint.config.js  package.json  tailwind.config.ts
site/src/: app.css
site/src/lib/components/layout/: DocumentDropdown.svelte  LightSwitch.svelte  MenuBar.svelte
site/src/routes/: +layout.svelte  +page.svelte
store/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  pyrightconfig.json
store/store/store/: settings.py  urls.py
store/store/store/management/commands/: create_admin.py
