[tool.poetry]
name = "store"
version = "0.1.0"
description = "Backend for Chronicle"
authors = ["Max Boone <max.boone@maxem.energy>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1"
django-ninja = "^1.3.0"
PyJWT = "^2.9.0"
django-cors-headers = "^4.4.0"
daphne = "^4.1.2"
channels = "^4.1.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.3"
django-stubs = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.django-stubs]
django_settings_module = "store.settings"
